--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
     "name": "MovieFlix`",
-    "slug": "MovieFlix",
+    "slug": "movieflix",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/logo.png",
     "scheme": "movies",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "ios": {
       "supportsTablet": true
     },
@@ -17,7 +17,8 @@
         "foregroundImage": "./assets/images/logo.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.harsh1407.MovieFlix"
     },
     "web": {
       "output": "static",
@@ -41,6 +42,13 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "db08defb-e783-46ee-8f43-a2c2af331b5d"
+      }
+    },
+    "owner": "harsh1407"
   }
 }
